``` Increased the padding of the .card element from 10px to 15px. Increased the padding of the .card__body element from 15px 10px to 15px 10px 25px. Increased the font-size of the p element from 0.9rem to 1rem.

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a {
 
 .card {
     background-color: var(--white);
-    padding: 10px;
+    padding: 15px;
     border-radius: var(--border-radius);
     width: 330px;
 
@@ -47,13 +47,13 @@ a {
 
 .card__body {
     text-align: center;
-    padding: 15px 10px;
+    padding: 15px 10px 25px;
     display: grid;
     gap: 10px;
 }
 
 
 p {
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: var(--grayish-blue);
 }
