--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --grayish-blue: hsl(220, 15%, 55%);
     --dark-blue: hsl(218, 44%, 22%);
     --font-family: 'Outfit', sans-serif;
-    --border-radius: 20px;
+    --border-radius: 15px;
 }
 
 
@@ -42,7 +42,7 @@ a {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: var(--border-radius);
+    border-radius: 5px;
 }
 
 .card__body {
