Update the HTML and CSS code to make the QR code image a link to Frontend Mentor challenges

--- a/style.css
+++ b/style.css
@@ -49,9 +49,12 @@ a {
     text-align: center;
     padding: 15px 10px 25px;
     display: grid;
-    gap: 10px;
+    gap: 15px;
 }
 
+h1 {
+    font-size: 1.5rem;
+}
 
 p {
     font-size: 1rem;
